# finlify

./: .env.example  .gitignore  CHANGELOG.md  DEMO_LAUNCH_CHECKLIST.md  LOCAL_TEST_GUIDE.md  README.md  demo_roadmap.md  docker-compose.yml  instruction.md  package-lock.json  package.json  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  (+1 more)
app/: finlify_streamlit_mvp_app.py  package-lock.json  package.json
backend/: Dockerfile  main.py  policy.py  pyproject.toml  requirements.txt  vercel.json
backend/scripts/: legacy_test_multistrategy.py
backend/tests/: conftest.py  test_deterministic_scoring.py  test_market_api.py  test_per_request_policy_selection.py  test_policy_math.py  test_policy_schema.py  test_policy_versioning.py  test_strategy_divergence.py  test_strategy_registry.py
docs/: POLICY_SCHEMA.md  api-contract.md  architecture.md  current_gaps_and_next_steps.md  data_pipeline_status.md  day2_supabase.sql  day2_supabase_runbook.md  folder_structure.md  governance.md  orchestration_plan.md  pipeline_runbook.md  policy_authoring.md  signal_engine_v1_design.md  signal_engine_v1_rules.md  strategies.md
forecast_service/: requirements.txt
frontend/: mock_quotes.json  package-lock.json  package.json
input/: finlify_core_universe.csv
scripts/: load_historical_to_supabase.py  pull_from_supabase.py  run_pipeline.py  validate_rankings_calibration.py
streamlit/: finlify_streamlit_mvp_app.py
test/: test.py
tests/: getstooq.py  test_build_rankings.py  test_build_signal_heatmap_snapshot.py  test_build_visualization_exports.py
(+82 files in other folders)
