[project]
name = "finlify-backend"
version = "0.1.0"
description = "FastAPI backend for Finlify"
authors = [{name = "Finlify Team"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "supabase>=2.3.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
